@@ -18,8 +18,7 @@
 package org.apache.livy.test.framework
 
 import java.io._
-import java.nio.charset.Charset
-import java.nio.file.{Files, Paths}
+import java.sql.DriverManager
 import javax.servlet.http.HttpServletResponse
 
 import scala.concurrent.duration._
@@ -48,31 +47,6 @@ private class MiniClusterConfig(val config: Map[String, String]) {
 
   private def getInt(key: String, default: Int): Int = {
     config.get(key).map(_.toInt).getOrElse(default)
-  }
-
-}
-
-sealed trait MiniClusterUtils extends ClusterUtils {
-  private val livySparkScalaVersionEnvVarName = "LIVY_SPARK_SCALA_VERSION"
-
-  protected def getSparkScalaVersion(): String = {
-    sys.env.getOrElse(livySparkScalaVersionEnvVarName, {
-      throw new RuntimeException(s"Please specify env var $livySparkScalaVersionEnvVarName.")
-    })
-  }
-
-  protected def saveConfig(conf: Configuration, dest: File): Unit = {
-    val redacted = new Configuration(conf)
-    // This setting references a test class that is not available when using a real Spark
-    // installation, so remove it from client configs.
-    redacted.unset("net.topology.node.switch.mapping.impl")
-
-    val out = new FileOutputStream(dest)
-    try {
-      redacted.writeXml(out)
-    } finally {
-      out.close()
-    }
   }
 
 }
@@ -124,9 +98,13 @@ object MiniYarnMain extends MiniClusterBase {
 
   override protected def start(config: MiniClusterConfig, configPath: String): Unit = {
     val baseConfig = new YarnConfiguration()
-    var yarnCluster = new MiniYARNCluster(getClass().getName(), config.nmCount,
+    val yarnCluster = new MiniYARNCluster(getClass().getName(), config.nmCount,
       config.localDirCount, config.logDirCount)
     yarnCluster.init(baseConfig)
+
+    // This allows applications run by YARN during the integration tests to find PIP modules
+    // installed in the user's home directory (instead of just the global ones).
+    baseConfig.set(YarnConfiguration.NM_USER_HOME_DIR, sys.env("HOME"))
 
     // Install a shutdown hook for stop the service and kill all running applications.
     Runtime.getRuntime().addShutdownHook(new Thread() {
@@ -149,18 +127,25 @@ object MiniYarnMain extends MiniClusterBase {
 }
 
 object MiniLivyMain extends MiniClusterBase {
-  var livyUrl: Option[String] = None
-
-  def start(config: MiniClusterConfig, configPath: String): Unit = {
-    var livyConf = Map(
+  protected def baseLivyConf(configPath: String): Map[String, String] = {
+    val baseConf = Map(
       LivyConf.LIVY_SPARK_MASTER.key -> "yarn",
       LivyConf.LIVY_SPARK_DEPLOY_MODE.key -> "cluster",
-      LivyConf.LIVY_SPARK_SCALA_VERSION.key -> getSparkScalaVersion(),
       LivyConf.HEARTBEAT_WATCHDOG_INTERVAL.key -> "1s",
       LivyConf.YARN_POLL_INTERVAL.key -> "500ms",
       LivyConf.RECOVERY_MODE.key -> "recovery",
       LivyConf.RECOVERY_STATE_STORE.key -> "filesystem",
       LivyConf.RECOVERY_STATE_STORE_URL.key -> s"file://$configPath/state-store")
+    val thriftEnabled = sys.env.get("LIVY_TEST_THRIFT_ENABLED")
+    if (thriftEnabled.nonEmpty && thriftEnabled.forall(_.toBoolean)) {
+      baseConf + (LivyConf.THRIFT_SERVER_ENABLED.key -> "true")
+    } else {
+      baseConf
+    }
+  }
+
+  def start(config: MiniClusterConfig, configPath: String): Unit = {
+    var livyConf = baseLivyConf(configPath)
 
     if (Cluster.isRunningOnTravis) {
       livyConf ++= Map("livy.server.yarn.app-lookup-timeout" -> "2m")
@@ -175,7 +160,10 @@ object MiniLivyMain extends MiniClusterBase {
     // server. Do it atomically since it's used by MiniCluster to detect when the Livy server
     // is up and ready.
     eventually(timeout(30 seconds), interval(1 second)) {
-      val serverUrlConf = Map("livy.server.server-url" -> server.serverUrl())
+      var serverUrlConf = Map("livy.server.server-url" -> server.serverUrl())
+      server.getJdbcUrl.foreach { url =>
+        serverUrlConf += ("livy.server.thrift.jdbc-url" -> url)
+      }
       saveProperties(serverUrlConf, new File(configPath + "/serverUrl.conf"))
     }
   }
@@ -204,20 +192,12 @@ class MiniCluster(config: Map[String, String]) extends Cluster with MiniClusterU
   private var yarn: Option[ProcessInfo] = None
   private var livy: Option[ProcessInfo] = None
   private var livyUrl: String = _
+  private var livyThriftJdbcUrl: Option[String] = None
   private var _hdfsScrathDir: Path = _
 
   override def configDir(): File = _configDir
 
   override def hdfsScratchDir(): Path = _hdfsScrathDir
-
-  override def isRealSpark(): Boolean = {
-    new File(sys.env("SPARK_HOME") + File.separator + "RELEASE").isFile()
-  }
-
-  override def hasSparkR(): Boolean = {
-    val path = Seq(sys.env("SPARK_HOME"), "R", "lib", "sparkr.zip").mkString(File.separator)
-    new File(path).isFile()
-  }
 
   override def doAsClusterUser[T](task: => T): T = task
 
@@ -237,29 +217,7 @@ class MiniCluster(config: Map[String, String]) extends Cluster with MiniClusterU
     assert(tempDir.mkdir(), "Cannot create temp test dir.")
     sparkConfDir = mkdir("spark-conf")
 
-    // When running a real Spark cluster, don't set the classpath.
-    val extraCp = if (!isRealSpark()) {
-      val sparkScalaVersion = getSparkScalaVersion()
-      val classPathFile =
-        new File(s"minicluster-dependencies/scala-$sparkScalaVersion/target/classpath")
-      assert(classPathFile.isFile,
-        s"Cannot read MiniCluster classpath file: ${classPathFile.getCanonicalPath}")
-      val sparkClassPath =
-        FileUtils.readFileToString(classPathFile, Charset.defaultCharset())
-
-      val dummyJar = Files.createTempFile(Paths.get(tempDir.toURI), "dummy", "jar").toFile
-      Map(
-        SparkLauncher.DRIVER_EXTRA_CLASSPATH -> sparkClassPath,
-        SparkLauncher.EXECUTOR_EXTRA_CLASSPATH -> sparkClassPath,
-        // Used for Spark 2.0. Spark 2.0 will upload specified jars to distributed cache in yarn
-        // mode, if not specified it will check jars folder. Here since jars folder is not
-        // existed, so it will throw exception.
-        "spark.yarn.jars" -> dummyJar.getAbsolutePath)
-    } else {
-      Map()
-    }
-
-    val sparkConf = extraCp ++ Map(
+    val sparkConf = Map(
       "spark.executor.instances" -> "1",
       "spark.scheduler.minRegisteredResourcesRatio" -> "0.0",
       "spark.ui.enabled" -> "false",
@@ -297,6 +255,7 @@ class MiniCluster(config: Map[String, String]) extends Cluster with MiniClusterU
 
     val props = loadProperties(confFile)
     livyUrl = props("livy.server.server-url")
+    livyThriftJdbcUrl = props.get("livy.server.thrift.jdbc-url")
 
     // Wait until Livy server responds.
     val httpClient = new AsyncHttpClient()
@@ -312,10 +271,13 @@ class MiniCluster(config: Map[String, String]) extends Cluster with MiniClusterU
     assert(livy.isDefined)
     livy.foreach(stop)
     livyUrl = null
+    livyThriftJdbcUrl = None
     livy = None
   }
 
   def livyEndpoint: String = livyUrl
+
+  def jdbcEndpoint: Option[String] = livyThriftJdbcUrl
 
   private def mkdir(name: String, parent: File = tempDir): File = {
     val dir = new File(parent, name)
@@ -336,14 +298,12 @@ class MiniCluster(config: Map[String, String]) extends Cluster with MiniClusterU
     // Before starting anything, clean up previous running sessions.
     sys.process.Process(s"pkill -f $simpleName") !
 
-    val java = sys.props("java.home") + "/bin/java"
     val cmd =
       Seq(
         sys.props("java.home") + "/bin/java",
         "-Dtest.appender=console",
         "-Djava.io.tmpdir=" + procTmp.getAbsolutePath(),
-        "-cp", childClasspath + File.pathSeparator + configDir.getAbsolutePath(),
-        "-XX:MaxPermSize=256m") ++
+        "-cp", childClasspath + File.pathSeparator + configDir.getAbsolutePath()) ++
       extraJavaArgs ++
       Seq(
         klass.getName().stripSuffix("$"),
